--- a/letters/letter1/index.html
+++ b/letters/letter1/index.html
@@ -24,7 +24,10 @@
       </table>
       <table cellspacing="0" cellpadding="0" width="100%">
         <thead>
-        <tr><td height="57px" valign="top" style="vertical-align: top; line-height: 0; height: 57px;"><div style="height: 57px;"><img align="left" border="0" vspace="0" style="display: block; border: none;" src="images/sidebar-hd.png" alt=""></div></td></tr>
+        <tr><td height="57px" valign="top" style="vertical-align: top; line-height: 0; height: 57px;">
+          <div style="height: 57px;"><img align="left" border="0" vspace="0" style="display: block; border: none;" src="images/sidebar-hd.png" alt="">
+          </div>
+        </td></tr>
         </thead>
         <tbody>
           <tr>
