--- a/letters/letter2/index.html
+++ b/letters/letter2/index.html
@@ -8,9 +8,11 @@
 <table cellspacing="0" cellpadding="0" width="600px" style="width: 600px;background:#cccccc;">
   <thead>
   <tr>
-    <td height="93px" valign="top" style="vertical-align: top; line-height: 0; height: 93px;border-bottom: 2px solid #532b30;">
+    <td height="93px" valign="top"
+        style="vertical-align: top; line-height: 0; height: 93px;border-bottom: 2px solid #532b30;">
       <div style="height: 93px;">
-        <img align="left" border="0" vspace="0" width="600" height="93" style="display: block; border: none;" src="images/header.jpg" alt=""/>
+        <img align="left" border="0" vspace="0" width="600" height="93" style="display: block; border: none;"
+             src="images/header.jpg" alt=""/>
       </div>
     </td>
   </tr>
@@ -18,14 +20,55 @@
   <tbody>
   <tr>
     <td style="padding: 23px">
-    <h1 style="font-family: Arial;font-size: 34px;line-height: 36px;color: #4d1d26;text-align: left;margin: 0">
-      Nullam Quis Risus Eget Urna Mollis Ornare Cel Eu Leo.
-    </h1>
-    <p style="font-family: Arial;font-size: 12px;line-height: 18px;color: #666666;text-align: justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc adipiscing velit at condimentum egestas. Maecenas
-      faucibus, sem sit amet laoreet lobortis, lacus nulla tellus, ullamcorper dapibus sapien. Sed posuere consectetur
-      est at lobortis. Cras mattis consectetur purus sit amet fermentum.
-    </p>
-    <img align="center" border="0" vspace="0" style="display: block; border: 10px solid #ffffff;" src="images/central-img.jpg" alt=""/>
+      <h1 style="font-family: Arial;font-size: 34px;line-height: 36px;color: #4d1d26;text-align: left;margin: 0">
+        Nullam Quis Risus Eget Urna Mollis Ornare Cel Eu Leo.
+      </h1>
+
+      <p style="font-family: Arial;font-size: 12px;line-height: 18px;color: #666666;text-align: justify">Lorem ipsum
+        dolor
+        sit amet, consectetur adipiscing elit. Nunc adipiscing velit at condimentum egestas. Maecenas
+        faucibus, sem sit amet laoreet lobortis, lacus nulla tellus, ullamcorper dapibus sapien. Sed posuere consectetur
+        est at lobortis. Cras mattis consectetur purus sit amet fermentum.
+      </p>
+      <img align="center" border="0" vspace="0" style="display: block; border: 10px solid #ffffff;"
+           src="images/central-img.jpg" alt=""/>
+    </td>
+  </tr>
+  <tr>
+    <td style="padding: 0 23px 23px">
+
+    <table cellspacing="0" cellpadding="0" style="width: 100%;">
+      <tbody>
+      <tr>
+        <td width="275px" valign="top">
+          <h2 style="text-transform: uppercase;color: #4d1d26;font-family: Arial;font-size: 14px;line-height: 18px;margin-bottom: 0;">
+            SUSHI SMALL TRAY $40
+          </h2>
+          <p style="color: #666666;font-size: 12px;line-height: 18px;font-family: Arial;margin-top: 0;">
+            California Roll,NY Roll,Tuna Roll,
+            Tootsie Roll,Shrimp Nigiri,Salmon Nigiri,Freshwater eel Nigir.
+          </p>
+          <h2 style="text-transform: uppercase;color: #4d1d26;font-family: Arial;font-size: 14px;line-height: 18px;margin-bottom: 0;">
+            SUSHI DELUXE TRAY $60
+          </h2>
+          <p style="color: #666666;font-size: 12px;line-height: 18px;font-family: Arial;margin-top: 0;">
+            Yakitori Robata Sirlon Robata, Bacon Asparagus Robata,Veggie Robata, California Roll,
+            NY Roll, Tuna Roll, Tootsie Roll, Shrimp Nigiri,Salmon Nigiri, Freshwater eel Nigiri and Edamame
+          </p>
+        </td>
+        <td width="275px" valign="top" style="padding-left: 20px">
+          <h2 style="text-transform: uppercase;color: #4d1d26;font-family: Arial;font-size: 14px;line-height: 18px;margin-bottom: 0;">
+            SUSHI LARGE TRAY $80
+          </h2>
+          <p style="color: #666666;font-size: 12px;line-height: 18px;font-family: Arial;margin-top: 0;">
+            Yakitori Robata, Sirlon Robata, Bacon Asparagus Robata, Veggie Robata, Asain sausage Robata,
+            California Roll, NY Roll, Tuna Roll, Tootsie Roll, Salmon Nigiri, Freshwater eel Nigiri,1 Special roll(value of $14) and Edamame
+          </p>
+        </td>
+      </tr>
+      </tbody>
+    </table>
+
     </td>
   </tr>
   </tbody>
