--- a/letters/letter2/index.html
+++ b/letters/letter2/index.html
@@ -37,43 +37,72 @@
   <tr>
     <td style="padding: 0 23px 23px">
 
-    <table cellspacing="0" cellpadding="0" style="width: 100%;">
-      <tbody>
-      <tr>
-        <td width="275px" valign="top">
-          <h2 style="text-transform: uppercase;color: #4d1d26;font-family: Arial;font-size: 14px;line-height: 18px;margin-bottom: 0;">
-            SUSHI SMALL TRAY $40
-          </h2>
-          <p style="color: #666666;font-size: 12px;line-height: 18px;font-family: Arial;margin-top: 0;">
-            California Roll,NY Roll,Tuna Roll,
-            Tootsie Roll,Shrimp Nigiri,Salmon Nigiri,Freshwater eel Nigir.
-          </p>
-          <h2 style="text-transform: uppercase;color: #4d1d26;font-family: Arial;font-size: 14px;line-height: 18px;margin-bottom: 0;">
-            SUSHI DELUXE TRAY $60
-          </h2>
-          <p style="color: #666666;font-size: 12px;line-height: 18px;font-family: Arial;margin-top: 0;">
-            Yakitori Robata Sirlon Robata, Bacon Asparagus Robata,Veggie Robata, California Roll,
-            NY Roll, Tuna Roll, Tootsie Roll, Shrimp Nigiri,Salmon Nigiri, Freshwater eel Nigiri and Edamame
-          </p>
-        </td>
-        <td width="275px" valign="top" style="padding-left: 20px">
-          <h2 style="text-transform: uppercase;color: #4d1d26;font-family: Arial;font-size: 14px;line-height: 18px;margin-bottom: 0;">
-            SUSHI LARGE TRAY $80
-          </h2>
-          <p style="color: #666666;font-size: 12px;line-height: 18px;font-family: Arial;margin-top: 0;">
-            Yakitori Robata, Sirlon Robata, Bacon Asparagus Robata, Veggie Robata, Asain sausage Robata,
-            California Roll, NY Roll, Tuna Roll, Tootsie Roll, Salmon Nigiri, Freshwater eel Nigiri,1 Special roll(value of $14) and Edamame
-          </p>
-        </td>
-      </tr>
-      </tbody>
-    </table>
+      <table cellspacing="0" cellpadding="0" style="width: 100%;">
+        <tbody>
+        <tr>
+          <td width="275px" valign="top">
+            <h2
+              style="text-transform: uppercase;color: #4d1d26;font-family: Arial;font-size: 14px;line-height: 18px;margin-bottom: 0;">
+              SUSHI SMALL TRAY $40
+            </h2>
 
+            <p style="color: #666666;font-size: 12px;line-height: 18px;font-family: Arial;margin-top: 0;">
+              California Roll,NY Roll,Tuna Roll,
+              Tootsie Roll,Shrimp Nigiri,Salmon Nigiri,Freshwater eel Nigir.
+            </p>
+
+            <h2
+              style="text-transform: uppercase;color: #4d1d26;font-family: Arial;font-size: 14px;line-height: 18px;margin-bottom: 0;">
+              SUSHI DELUXE TRAY $60
+            </h2>
+
+            <p style="color: #666666;font-size: 12px;line-height: 18px;font-family: Arial;margin-top: 0;">
+              Yakitori Robata Sirlon Robata, Bacon Asparagus Robata,Veggie Robata, California Roll,
+              NY Roll, Tuna Roll, Tootsie Roll, Shrimp Nigiri,Salmon Nigiri, Freshwater eel Nigiri and Edamame
+            </p>
+          </td>
+          <td width="275px" valign="top" style="padding-left: 20px">
+            <h2
+              style="text-transform: uppercase;color: #4d1d26;font-family: Arial;font-size: 14px;line-height: 18px;margin-bottom: 0;">
+              SUSHI LARGE TRAY $80
+            </h2>
+
+            <p style="color: #666666;font-size: 12px;line-height: 18px;font-family: Arial;margin-top: 0;">
+              Yakitori Robata, Sirlon Robata, Bacon Asparagus Robata, Veggie Robata, Asain sausage Robata,
+              California Roll, NY Roll, Tuna Roll, Tootsie Roll, Salmon Nigiri, Freshwater eel Nigiri,1 Special
+              roll(value of $14) and Edamame
+            </p>
+          </td>
+        </tr>
+        </tbody>
+      </table>
     </td>
   </tr>
   </tbody>
   <tfoot>
+  <table cellspacing="0" cellpadding="0" width="600px" style="width: 600px;background:#370403;padding: 25px">
+    <tbody>
+    <tr>
+      <td width="30%">
+        <a href="#">
+          <img align="center" border="0" vspace="0" style="display: block; border: none;" src="images/nake-res.jpg" alt=""/>
+        </a>
+      </td>
+      <td width="30%"></td>
+      <td width="30%">
+        <p style="font-size: 13px;margin: 0;color: #bf9d9d;">
+        4318 N. Western<br>
+        Oklahoma City, OK 73118
+        </p>
+      </td>
+    </tr>
+    </tbody>
+  </table>
+
   </tfoot>
 </table>
 </body>
 </html>
+
+
+
