--- a/letters/letter2/index.html
+++ b/letters/letter2/index.html
@@ -80,25 +80,80 @@
   </tr>
   </tbody>
   <tfoot>
-  <table cellspacing="0" cellpadding="0" width="600px" style="width: 600px;background:#370403;padding: 25px">
-    <tbody>
-    <tr>
-      <td width="30%">
-        <a href="#">
-          <img align="center" border="0" vspace="0" style="display: block; border: none;" src="images/nake-res.jpg" alt=""/>
-        </a>
-      </td>
-      <td width="30%"></td>
-      <td width="30%">
-        <p style="font-size: 13px;margin: 0;color: #bf9d9d;">
-        4318 N. Western<br>
-        Oklahoma City, OK 73118
-        </p>
-      </td>
-    </tr>
-    </tbody>
-  </table>
+  <tr>
+    <td>
+      <table cellspacing="0" cellpadding="0" width="600px" style="width: 600px;background:#370403;padding: 25px">
+        <tbody>
+        <tr>
+          <td width="30%">
+            <a href="#">
+              <img align="center" border="0" vspace="0" style="display: block; border: none;" src="images/nake-res.jpg"
+                   alt=""/>
+            </a>
+          </td>
+          <td width="30%">
+            <table align="center" cellspacing="0" cellpadding="0" width="80%" style="background:#370403;">
+              <tbody>
+              <tr>
+                <td width="20%">
+                  <a href="#">
+                    <img align="center" border="0" vspace="0" style="display: block; border: none"
+                         src="images/facebook.png" alt=""/>
+                  </a>
+                </td>
+                <td width="20%">
+                  <a href="#">
+                    <img align="center" border="0" vspace="0" style="display: block; border: none"
+                         src="images/twitter.png" alt=""/>
+                  </a>
+                </td>
+                <td width="20%">
+                  <a href="#">
+                    <img align="center" border="0" vspace="0" style="display: block; border: none"
+                         src="images/zw.png" alt=""/>
+                  </a>
+                </td>
+              </tr>
+              </tbody>
+            </table>
 
+          </td>
+          <td width="30%">
+            <p style="font-size: 13px;margin: 0;color: #bf9d9d;">
+              4318 N. Western<br>
+              Oklahoma City, OK 73118
+            </p>
+          </td>
+        </tr>
+        </tbody>
+      </table>
+
+      <table align="center" cellspacing="0" cellpadding="0" width="600px" style="width: 600px;background:#370403;">
+        <tbody>
+        <tr>
+          <td align="center">
+            <a href="#">
+              <img align="center" border="0" vspace="0" style="display: block; border: none"
+                   src="images/western-concepts.png" alt=""/>
+            </a>
+          </td>
+        </tr>
+        </tbody>
+      </table>
+
+      <table align="center" cellspacing="0" cellpadding="0" width="600px" style="width: 600px;background:#000000;">
+        <tbody>
+        <tr>
+          <td align="center">
+
+
+          </td>
+        </tr>
+        </tbody>
+      </table>
+
+    </td>
+  </tr>
   </tfoot>
 </table>
 </body>
