--- a/letters/letter2/index.html
+++ b/letters/letter2/index.html
@@ -4,8 +4,8 @@
   <title></title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 </head>
-<body style="font-family: Arial; background-color: #333;">
-<table cellspacing="0" cellpadding="0" width="600px" style="width: 600px;background:#cccccc;">
+<body style="font-family: Arial; background-color: #333333;">
+<table cellspacing="0" cellpadding="0" width="600px" style="width: 600px;background:#cccccc;margin:0; padding:0">
   <thead>
   <tr>
     <td height="93px" valign="top"
@@ -20,9 +20,9 @@
   <tbody>
   <tr>
     <td style="padding: 23px">
-      <h1 style="font-family: Arial;font-size: 34px;line-height: 36px;color: #4d1d26;text-align: left;margin: 0">
-        Nullam Quis Risus Eget Urna Mollis Ornare Cel Eu Leo.
-      </h1>
+      <p style="font-family: Arial;font-size: 34px;line-height: 36px;color: #4d1d26;text-align: left;margin: 0">
+        <b>Nullam Quis Risus Eget Urna Mollis Ornare Cel Eu Leo.</b>
+      </p>
 
       <p style="font-family: Arial;font-size: 12px;line-height: 18px;color: #666666;text-align: justify">Lorem ipsum
         dolor
@@ -30,31 +30,34 @@
         faucibus, sem sit amet laoreet lobortis, lacus nulla tellus, ullamcorper dapibus sapien. Sed posuere consectetur
         est at lobortis. Cras mattis consectetur purus sit amet fermentum.
       </p>
-      <img align="center" border="0" vspace="0" style="display: block; border: 10px solid #ffffff;"
-           src="images/central-img.jpg" alt=""/>
+
+      <div style="height: 308px;">
+        <img align="center" border="0" vspace="0" style="display: block; border: 10px solid #ffffff;"
+             src="images/central-img.jpg" alt=""/>
+      </div>
     </td>
   </tr>
   <tr>
     <td style="padding: 0 23px 23px">
 
-      <table cellspacing="0" cellpadding="0" style="width: 100%;">
+      <table cellspacing="0" cellpadding="0" style="width: 100%;margin:0; padding:0">
         <tbody>
         <tr>
           <td width="275px" valign="top">
-            <h2
+            <p
               style="text-transform: uppercase;color: #4d1d26;font-family: Arial;font-size: 14px;line-height: 18px;margin-bottom: 0;">
-              SUSHI SMALL TRAY $40
-            </h2>
+              <b>SUSHI SMALL TRAY $40</b>
+            </p>
 
             <p style="color: #666666;font-size: 12px;line-height: 18px;font-family: Arial;margin-top: 0;">
               California Roll,NY Roll,Tuna Roll,
               Tootsie Roll,Shrimp Nigiri,Salmon Nigiri,Freshwater eel Nigir.
             </p>
 
-            <h2
+            <p
               style="text-transform: uppercase;color: #4d1d26;font-family: Arial;font-size: 14px;line-height: 18px;margin-bottom: 0;">
-              SUSHI DELUXE TRAY $60
-            </h2>
+              <b>SUSHI DELUXE TRAY $60</b>
+            </p>
 
             <p style="color: #666666;font-size: 12px;line-height: 18px;font-family: Arial;margin-top: 0;">
               Yakitori Robata Sirlon Robata, Bacon Asparagus Robata,Veggie Robata, California Roll,
@@ -62,10 +65,10 @@
             </p>
           </td>
           <td width="275px" valign="top" style="padding-left: 20px">
-            <h2
+            <p
               style="text-transform: uppercase;color: #4d1d26;font-family: Arial;font-size: 14px;line-height: 18px;margin-bottom: 0;">
-              SUSHI LARGE TRAY $80
-            </h2>
+              <b>SUSHI LARGE TRAY $80</b>
+            </p>
 
             <p style="color: #666666;font-size: 12px;line-height: 18px;font-family: Arial;margin-top: 0;">
               Yakitori Robata, Sirlon Robata, Bacon Asparagus Robata, Veggie Robata, Asain sausage Robata,
@@ -82,36 +85,46 @@
   <tfoot>
   <tr>
     <td>
-      <table cellspacing="0" cellpadding="0" width="600px" style="width: 600px;background:#370403;padding: 25px">
+      <table cellspacing="0" cellpadding="0" width="600px"
+             style="width: 600px;background:#370403;padding: 25px 25px 15px;border-top: 2px solid #000000;margin: 0">
         <tbody>
         <tr>
           <td width="30%">
-            <a href="#">
-              <img align="center" border="0" vspace="0" style="display: block; border: none;" src="images/nake-res.jpg"
-                   alt=""/>
-            </a>
+            <div style="height: 36px;">
+              <a href="#">
+                <img align="center" border="0" vspace="0" style="display: block; border: none;"
+                     src="images/nake-res.jpg"
+                     alt=""/>
+              </a>
+            </div>
           </td>
           <td width="30%">
-            <table align="center" cellspacing="0" cellpadding="0" width="80%" style="background:#370403;">
+            <table align="center" cellspacing="0" cellpadding="0" width="80%" style="background:#370403;padding: 0">
               <tbody>
               <tr>
                 <td width="20%">
-                  <a href="#">
-                    <img align="center" border="0" vspace="0" style="display: block; border: none"
-                         src="images/facebook.png" alt=""/>
-                  </a>
+                  <div style="height: 37px;">
+                    <a href="#">
+                      <img align="center" border="0" vspace="0" style="display: block; border: none"
+                           src="images/facebook.png" alt=""/>
+                    </a>
+                  </div>
                 </td>
                 <td width="20%">
-                  <a href="#">
-                    <img align="center" border="0" vspace="0" style="display: block; border: none"
-                         src="images/twitter.png" alt=""/>
-                  </a>
+                  <div style="height: 37px;">
+                    <a href="#">
+                      <img align="center" border="0" vspace="0" style="display: block; border: none"
+                           src="images/twitter.png" alt=""/>
+                    </a>
+                  </div>
                 </td>
                 <td width="20%">
-                  <a href="#">
-                    <img align="center" border="0" vspace="0" style="display: block; border: none"
-                         src="images/zw.png" alt=""/>
-                  </a>
+                  <div style="height: 37px;">
+                    <a href="#">
+                      <img align="center" border="0" vspace="0" style="display: block; border: none"
+                           src="images/zw.png" alt=""/>
+                    </a>
+                  </div>
                 </td>
               </tr>
               </tbody>
@@ -128,25 +141,54 @@
         </tbody>
       </table>
 
-      <table align="center" cellspacing="0" cellpadding="0" width="600px" style="width: 600px;background:#370403;">
+      <table align="center" cellspacing="0" cellpadding="0" width="600px"
+             style="width: 600px;background:#370403;margin:0; padding:0">
         <tbody>
         <tr>
           <td align="center">
-            <a href="#">
-              <img align="center" border="0" vspace="0" style="display: block; border: none"
-                   src="images/western-concepts.png" alt=""/>
-            </a>
+            <div style="height: 37px;">
+              <a href="#">
+                <img align="center" border="0" vspace="0" style="display: block; border: none"
+                     src="images/western-concepts.png" alt=""/>
+              </a>
+            </div>
           </td>
         </tr>
         </tbody>
       </table>
 
-      <table align="center" cellspacing="0" cellpadding="0" width="600px" style="width: 600px;background:#000000;">
+      <table align="center" cellspacing="0" cellpadding="0" width="600px"
+             style="width: 600px;background:#000000;padding: 10px 0;margin: 0">
         <tbody>
         <tr>
           <td align="center">
-
-
+            <a href="#"
+               style="text-transform:uppercase;font-family:Arial; color:#99958e; text-decoration: none;font-size: 9px;">Sushi
+              Neko</a>
+          </td>
+          <td align="center">
+            <a href="#"
+               style="text-transform:uppercase;font-family:Arial; color:#99958e;text-decoration: none;font-size: 9px;">Musashi’s</a>
+          </td>
+          <td align="center">
+            <a href="#"
+               style="text-transform:uppercase;font-family:Arial; color:#99958e;text-decoration: none;font-size: 9px;">Will
+              Rogers Theatre</a>
+          </td>
+          <td align="center">
+            <a href="#"
+               style="text-transform:uppercase;font-family:Arial; color:#99958e;text-decoration: none;font-size: 9px;">The
+              Lobby Cafe & Bar</a>
+          </td>
+          <td align="center">
+            <a href="#"
+               style="text-transform:uppercase;font-family:Arial; color:#99958e;text-decoration: none;font-size: 9px;">The
+              Coach House</a>
+          </td>
+          <td align="center">
+            <a href="#"
+               style="text-transform:uppercase;font-family:Arial; color:#99958e;text-decoration: none;font-size: 9px;">The
+              Tasting Room</a>
           </td>
         </tr>
         </tbody>
