--- a/letters/letter3/index.html
+++ b/letters/letter3/index.html
@@ -8,10 +8,10 @@
 <table cellspacing="0" cellpadding="0" width="600px" style="width: 600px;background-color:#cccccc;margin:0; padding:0">
   <thead>
   <tr>
-    <td height="93px" valign="top"
-        style="vertical-align: top; line-height: 0; height: 93px;border-bottom: 2px solid #532b30;">
-      <div style="height: 93px;">
-        <img align="left" border="0" vspace="0" width="600" height="93" style="display: block; border: none;"
+    <td height="109px" valign="top"
+        style="vertical-align: top; line-height: 0; height: 109px;">
+      <div style="height: 109px;">
+        <img align="left" border="0" vspace="0" width="600" height="109" style="display: block; border: none;"
              src="images/header.jpg" alt=""/>
       </div>
     </td>
@@ -20,19 +20,19 @@
   <tbody>
   <tr>
     <td style="padding: 23px">
-      <p style="font-family: Arial;font-size: 34px;line-height: 36px;color: #4d1d26;text-align: left;margin: 0">
+      <p style="font-family: Arial;font-size: 34px;line-height: 36px;color: #bb9860;text-align: left;margin: 0">
         <b>Nullam Quis Risus Eget Urna Mollis Ornare Cel Eu Leo.</b>
       </p>
 
-      <p style="font-family: Arial;font-size: 12px;line-height: 18px;color: #666666;text-align: justify">Lorem ipsum
+      <p style="font-family: Arial;font-size: 12px;line-height: 18px;color: #000000;text-align: justify">Lorem ipsum
         dolor
         sit amet, consectetur adipiscing elit. Nunc adipiscing velit at condimentum egestas. Maecenas
         faucibus, sem sit amet laoreet lobortis, lacus nulla tellus, ullamcorper dapibus sapien. Sed posuere consectetur
         est at lobortis. Cras mattis consectetur purus sit amet fermentum.
       </p>
 
-      <div style="height: 308px;">
-        <img align="center" border="0" vspace="0" style="display: block; border: 10px solid #ffffff;"
+      <div style="height: 319px;">
+        <img align="center" border="0" vspace="0" style="display: block; border: 10px solid #000000;"
              src="images/central-img.jpg" alt=""/>
       </div>
     </td>
@@ -45,32 +45,32 @@
         <tr>
           <td width="275px" valign="top">
             <p
-              style="text-transform: uppercase;color: #4d1d26;font-family: Arial;font-size: 14px;line-height: 18px;margin-bottom: 0;">
+              style="text-transform: uppercase;color: #bb9860;font-family: Arial;font-size: 14px;line-height: 18px;margin-bottom: 0;">
               <b>SUSHI SMALL TRAY $40</b>
             </p>
 
-            <p style="color: #666666;font-size: 12px;line-height: 18px;font-family: Arial;margin-top: 0;">
+            <p style="color: #000000;font-size: 12px;line-height: 18px;font-family: Arial;margin-top: 0;">
               California Roll,NY Roll,Tuna Roll,
               Tootsie Roll,Shrimp Nigiri,Salmon Nigiri,Freshwater eel Nigir.
             </p>
 
             <p
-              style="text-transform: uppercase;color: #4d1d26;font-family: Arial;font-size: 14px;line-height: 18px;margin-bottom: 0;">
+              style="text-transform: uppercase;color: #bb9860;font-family: Arial;font-size: 14px;line-height: 18px;margin-bottom: 0;">
               <b>SUSHI DELUXE TRAY $60</b>
             </p>
 
-            <p style="color: #666666;font-size: 12px;line-height: 18px;font-family: Arial;margin-top: 0;">
+            <p style="color: #000000;font-size: 12px;line-height: 18px;font-family: Arial;margin-top: 0;">
               Yakitori Robata Sirlon Robata, Bacon Asparagus Robata,Veggie Robata, California Roll,
               NY Roll, Tuna Roll, Tootsie Roll, Shrimp Nigiri,Salmon Nigiri, Freshwater eel Nigiri and Edamame
             </p>
           </td>
           <td width="275px" valign="top" style="padding-left: 20px">
             <p
-              style="text-transform: uppercase;color: #4d1d26;font-family: Arial;font-size: 14px;line-height: 18px;margin-bottom: 0;">
+              style="text-transform: uppercase;color: #bb9860;font-family: Arial;font-size: 14px;line-height: 18px;margin-bottom: 0;">
               <b>SUSHI LARGE TRAY $80</b>
             </p>
 
-            <p style="color: #666666;font-size: 12px;line-height: 18px;font-family: Arial;margin-top: 0;">
+            <p style="color: #000000;font-size: 12px;line-height: 18px;font-family: Arial;margin-top: 0;">
               Yakitori Robata, Sirlon Robata, Bacon Asparagus Robata, Veggie Robata, Asain sausage Robata,
               California Roll, NY Roll, Tuna Roll, Tootsie Roll, Salmon Nigiri, Freshwater eel Nigiri,1 Special
               roll(value of $14) and Edamame
@@ -81,45 +81,44 @@
       </table>
     </td>
   </tr>
+  <tr>
+    <td>
+      <div style="height: 20px;">
+        <img align="center" border="0" vspace="0" width="600" height="20" style="display: block; border: none;"
+             src="images/bronze-trim-bottom.jpg" alt=""/>
+      </div>
+    </td>
+  </tr>
   </tbody>
   <tfoot>
   <tr>
     <td>
       <table cellspacing="0" cellpadding="0" width="600px"
-             style="width: 600px;background-color:#370403;padding: 25px 25px 15px;border-top: 2px solid #000000;margin: 0">
+             style="width: 600px;background-color:#000000;padding: 25px 25px 15px;margin: 0">
         <tbody>
         <tr>
-          <td width="30%">
-            <div style="height: 36px;">
-              <a href="#" style="color: #333333; font: 10px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 30px;">
-                <img align="center" border="0" vspace="0" style="display: block; border: none;"
-                     src="images/nake-res.jpg"
-                     alt=""/>
-              </a>
-            </div>
-          </td>
-          <td width="30%">
-            <table align="center" cellspacing="0" cellpadding="0" width="80%" style="background-color:#370403;padding: 0">
+          <td width="50%">
+            <table align="right" cellspacing="0" cellpadding="0" width="185px" style="background-color:#000000;padding: 0 50px 0 0">
               <tbody>
               <tr>
-                <td width="20%">
-                  <div style="height: 37px;">
+                <td>
+                  <div style="height: 40px;">
                     <a href="#" style="color: #333333; font: 10px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 30px;">
                       <img align="center" border="0" vspace="0" style="display: block; border: none"
                            src="images/facebook.png" alt=""/>
                     </a>
                   </div>
                 </td>
-                <td width="20%">
-                  <div style="height: 37px;">
+                <td>
+                  <div style="height: 40px;">
                     <a href="#" style="color: #333333; font: 10px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 30px;">
                       <img align="center" border="0" vspace="0" style="display: block; border: none"
                            src="images/twitter.png" alt=""/>
                     </a>
                   </div>
                 </td>
-                <td width="20%">
-                  <div style="height: 37px;">
+                <td>
+                  <div style="height: 40px;">
                     <a href="#" style="color: #333333; font: 10px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 30px;">
                       <img align="center" border="0" vspace="0" style="display: block; border: none"
                            src="images/zw.png" alt=""/>
@@ -131,8 +130,8 @@
             </table>
 
           </td>
-          <td width="30%">
-            <p style="font-size: 13px;margin: 0;color: #bf9d9d;">
+          <td width="50%">
+            <p style="font-size: 13px;margin: 0;color: #cc9966;">
               4318 N. Western<br>
               Oklahoma City, OK 73118
             </p>
@@ -142,11 +141,11 @@
       </table>
 
       <table align="center" cellspacing="0" cellpadding="0" width="600px"
-             style="width: 600px;background-color:#370403;margin:0; padding:0">
+             style="width: 600px;margin:0; padding:0">
         <tbody>
         <tr>
           <td align="center">
-            <div style="height: 37px;">
+            <div style="height: 39px;">
               <a href="#" style="color: #333333; font: 10px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 30px;">
                 <img align="center" border="0" vspace="0" style="display: block; border: none"
                      src="images/western-concepts.png" alt=""/>
