--- a/letters/letter5/index.html
+++ b/letters/letter5/index.html
@@ -5,13 +5,13 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 </head>
 <body style="font-family: Arial; background-color: #333333;">
-<table cellspacing="0" cellpadding="0" width="600px" style="width: 600px;background-color:#eccfa9;margin:0; padding:0">
+<table cellspacing="0" cellpadding="0" width="600px" style="width: 600px;background-color:#cccccc;margin:0; padding:0">
   <thead>
   <tr>
-    <td height="128px" valign="top"
-        style="vertical-align: top; line-height: 0; height: 128px;">
-      <div style="height: 128px;">
-        <img align="left" border="0" vspace="0" width="600" height="128" style="display: block; border: none;"
+    <td height="80px" valign="top"
+        style="vertical-align: top; line-height: 0; height: 80px;">
+      <div style="height: 80px;">
+        <img align="left" border="0" vspace="0" width="600" height="80" style="display: block; border: none;"
              src="images/header.jpg" alt=""/>
       </div>
     </td>
@@ -21,12 +21,13 @@
   <tr>
     <td style="padding: 23px">
       <p style="font-family: Arial;font-size: 34px;line-height: 36px;color: #333333;text-align: left;margin: 0">
-        <b>Would you like to try our Sushi Party to go Trays?</b>
+        <b>Tired of cooking?<br>
+          Would you like to try our Sushi Party To go Trays?</b>
       </p>
 
-      <p style="text-transform:uppercase;font-family: Arial;font-size: 12px;line-height: 18px;color: #333333;text-align: justify">
-        We have various Sushi Party trays to select for various special occasions: Game parties,
-        Baby showers or Weekend Get-togethers.
+      <p style="font-family: Arial;font-size: 12px;line-height: 18px;color: #333333;text-align: justify">
+        We have various Sushi Party trays to select for various special occasions:
+        Game parties, Baby showers or Weekend Get-togethers.
       </p>
 
       <div style="height: 340px;">
@@ -43,32 +44,32 @@
         <tr>
           <td width="275px" valign="top">
             <p
-              style="text-transform: uppercase;color: #402313;font-family: Arial;font-size: 14px;line-height: 18px;margin-bottom: 0;">
+              style="text-transform: uppercase;color: #330000;font-family: Arial;font-size: 14px;line-height: 18px;margin-bottom: 0;">
               <b>SUSHI SMALL TRAY $40</b>
             </p>
 
-            <p style="color: #402313;font-size: 12px;line-height: 18px;font-family: Arial;margin-top: 0;">
+            <p style="color: #4e4e4e;font-size: 12px;line-height: 18px;font-family: Arial;margin-top: 0;">
               California Roll,NY Roll,Tuna Roll,
               Tootsie Roll,Shrimp Nigiri,Salmon Nigiri,Freshwater eel Nigir.
             </p>
 
             <p
-              style="text-transform: uppercase;color: #402313;font-family: Arial;font-size: 14px;line-height: 18px;margin-bottom: 0;">
+              style="text-transform: uppercase;color: #330000;font-family: Arial;font-size: 14px;line-height: 18px;margin-bottom: 0;">
               <b>SUSHI DELUXE TRAY $60</b>
             </p>
 
-            <p style="color: #402313;font-size: 12px;line-height: 18px;font-family: Arial;margin-top: 0;">
+            <p style="color: #4e4e4e;font-size: 12px;line-height: 18px;font-family: Arial;margin-top: 0;">
               Yakitori Robata Sirlon Robata, Bacon Asparagus Robata,Veggie Robata, California Roll,
               NY Roll, Tuna Roll, Tootsie Roll, Shrimp Nigiri,Salmon Nigiri, Freshwater eel Nigiri and Edamame
             </p>
           </td>
           <td width="275px" valign="top" style="padding-left: 20px">
             <p
-              style="text-transform: uppercase;color: #402313;font-family: Arial;font-size: 14px;line-height: 18px;margin-bottom: 0;">
+              style="text-transform: uppercase;color: #330000;font-family: Arial;font-size: 14px;line-height: 18px;margin-bottom: 0;">
               <b>SUSHI LARGE TRAY $80</b>
             </p>
 
-            <p style="color: #000000;font-size: 12px;line-height: 18px;font-family: Arial;margin-top: 0;">
+            <p style="color: #4e4e4e;font-size: 12px;line-height: 18px;font-family: Arial;margin-top: 0;">
               Yakitori Robata, Sirlon Robata, Bacon Asparagus Robata, Veggie Robata, Asain sausage Robata,
               California Roll, NY Roll, Tuna Roll, Tootsie Roll, Salmon Nigiri, Freshwater eel Nigiri,1 Special
               roll(value of $14) and Edamame
@@ -81,8 +82,8 @@
   </tr>
   <tr>
     <td>
-      <div style="height: 57px;">
-        <img align="center" border="0" vspace="0" width="600" height="57" style="display: block; border: none;"
+      <div style="height: 86px;">
+        <img align="center" border="0" vspace="0" width="600" height="86" style="display: block; border: none;"
              src="images/trim-bottom.jpg" alt=""/>
       </div>
     </td>
@@ -92,7 +93,7 @@
   <tr>
     <td>
       <table cellspacing="0" cellpadding="0" width="600px"
-             style="width: 600px;background-color:#660000;padding: 25px 25px 15px;margin: 0">
+             style="width: 600px;background-color:#330000;padding: 25px 25px 15px;margin: 0">
         <tbody>
         <tr>
           <td width="30%">
@@ -105,11 +106,11 @@
             </div>
           </td>
           <td width="30%">
-            <table align="center" cellspacing="0" cellpadding="0" width="80%" style="background-color:#660000;padding: 0">
+            <table align="center" cellspacing="0" cellpadding="0" width="80%" style="background-color:#330000;padding: 0">
               <tbody>
               <tr>
                 <td width="20%">
-                  <div style="height: 37px;">
+                  <div style="height: 42px;">
                     <a href="#" style="color: #333333; font: 10px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 30px;">
                       <img align="center" border="0" vspace="0" style="display: block; border: none"
                            src="images/facebook.png" alt=""/>
@@ -117,7 +118,7 @@
                   </div>
                 </td>
                 <td width="20%">
-                  <div style="height: 37px;">
+                  <div style="height: 42px;">
                     <a href="#" style="color: #333333; font: 10px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 30px;">
                       <img align="center" border="0" vspace="0" style="display: block; border: none"
                            src="images/twitter.png" alt=""/>
@@ -125,7 +126,7 @@
                   </div>
                 </td>
                 <td width="20%">
-                  <div style="height: 37px;">
+                  <div style="height: 42px;">
                     <a href="#" style="color: #333333; font: 10px Arial, sans-serif;display: block;-webkit-text-size-adjust:none;line-height: 30px;">
                       <img align="center" border="0" vspace="0" style="display: block; border: none"
                            src="images/zw.png" alt=""/>
@@ -138,7 +139,7 @@
 
           </td>
           <td width="30%">
-            <p style="font-size: 13px;margin: 0;color: #cccc99;">
+            <p style="font-size: 13px;margin: 0;color: #cccccc;">
               4318 N. Western<br>
               Oklahoma City, OK 73118
             </p>
@@ -148,7 +149,7 @@
       </table>
 
       <table align="center" cellspacing="0" cellpadding="0" width="600px"
-             style="width: 600px;background-color:#660000;margin:0; padding:0">
+             style="width: 600px;background-color:#330000;margin:0; padding:0">
         <tbody>
         <tr>
           <td align="center">
